changing the linked css and java files

--- a/layout.html
+++ b/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
-    <link rel="stylesheet" href="csas.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <body>
     <Header>
@@ -67,7 +67,7 @@
             </div>
         </div>
     </main>
-    <script src="js.js"></script>
+    <script src="logic.js"></script>
 </body>
 <footer>
         <div class="progress-container">
